fix + refactor: replaced preview features reused when develping with Java 21, and some more replacement of deprecated APIs used